bcxos/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - argocd.sendi.bcxos.com
    # secretName: letsencrypt-nginx-echo
  rules:
    - host: argocd.sendi.bcxos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            argocd:
              service:
                name: argocd-server
                port:
                  number: 443
  ingressClassName: nginx
